# NRF_Test

./: CMakeLists.txt  README.md  compile_commands.json  firmware
NRF24_master/: RF24.cpp  RF24.h  nRF24L01.h
SPI_master/: SPI.cpp  SPI.hpp
TIMER_setup/: timer.cpp  timer.hpp
src/: main.cpp
